[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qade"
version = "1.0.0"
description = "Quant Analyst Decision Environment — OpenEnv Hackathon"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["openenv", "reinforcement-learning", "trading", "finance", "rl"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "numpy>=1.26.4",
    "openai>=1.30.1",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:start"

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["qade*", "tasks*", "graders*", "server*"]

[tool.openenv]
name = "qade"
version = "1.0.0"
entry_point = "server.app:app"
framework = "fastapi"
